2006-02-23  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* man/en/man.man (BROWSER, HTMLPAGER): Correct punctuation in, and use
	of `.B' and `.BR' requests, for documenting default commands.

2006-02-14  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* src/Makefile.in (version.h): Tidy command line quoting.
	(clean, distclean): Tidy logic for `*$(EXEEXT)' removal, to avoid
	ignored errors in `make'.
	(MKINSTALLDIRS): Define.
	(install): Use it; tidy backup logic for `man.conf', to avoid ignored
	error in `make install'.

	* man2html/Makefile.in (top_builddir): Remove definition.
	(CFLAGS): Keep user/autoconf setting; don't augment locally.
	(.c.o): Replace default rule, to apply local flag settings.
	(version.h): New target; generate file locally.
	(man2html): Make object file dependent on `version.h'.

2006-02-08  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* src/man.c, src/manpath.c, catopen/catopen.c (index): Omit function
	prototype when mapped to `strchr' function.

	* src/man.c, src/manpath.c, src/man-config.c, src/to_cat.c (rindex):
	Omit function prototype when mapped to `strrchr' function.

2006-02-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	* src/win32/Makefile.in (GCC): Make it use AC_SUBSTed `CC'.

2006-01-24  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Clean up `make' rules for installing message catalogues.

	* aclocal.m4 (MAN_PROG_GENCAT): Improve descriptive commentary.
	(MAN_NLS_LOCALE_CACHE_INIT): Always define `locale', even when NLS
	support is disabled; do not canonicalise to Win32 form.
	(MAN_NLS_LOCALE_DIRECTORY): Modified to define...
	(locale_prefix, locale_path): ...these; new AC_SUBST variables.

	* configure: Regenerated.

	* msgs/Makefile.in (install): Rewrite all commands; based on...
	(locale, locale_prefix, locale_path): New AC_SUBSTed variables.
	(stamp.cat): Improved reporting of `make' progress.

	* msgs/inst.sh: Redundant file; deleted.
